[package]
name = "aurme"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11"
tar = "0.4.35"
flate2 = "1.0.24"
home = "0.5.5"
serde_json = "1.0.96"
ansi_term = "0.12.1"
clap = "4.5.4"
async-trait = "0.1.80"
shellexpand = "3.1.0"
